<resources>
    <string name="app_name">Instagram Clone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="add_post">Add Post</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="kirim">Kirim</string>
    <string name="instagram">Instagram</string>
    <string name="menu">Menu</string>
</resources>